k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: ambassador
spec:
  tls:
  - hosts:
      - ticketing.fengdu.cloud
    secretName: ticketing-tls-secret
  rules:
  - host: ticketing.fengdu.cloud
    http:
      paths:
      - path: /auth/
        pathType: Prefix
        backend:
          service:
            name: auth-svc
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 3000
---
